@@ -6,7 +6,13 @@ Version 1.11.15+dev:
  * Language and i18n:
    * Updated translations:
 
-   
+ * WML engine:
+   * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
+     not interrupt the game load sequence or display an error message in-game,
+     resulting in loading malformed/incomplete WML data
+     <http://r.wesnoth.org/p571380>.
+
+
 Version 1.11.15:
  * Language and i18n:
    * Updated translations: Portuguese
@@ -23,7 +29,7 @@ Version 1.11.14:
    * Revert premoved units selection to Wesnoth 1.10 behavior (#21448)
    * Fix unit move continuation if enemy discovered (#21372)
 
-   
+
 Version 1.11.13:
  * AI:
    * Micro AIs: fixes for a variety of rarely occurring but serious bugs
